HelloUltraviolet/Fixtures/RejectedSource/Expressions/CallExpressionsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the CallExpressionsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2531", "diag.16.CallExpressions")
